PLA-15 align auth error responses
